--- a/theme/cascader.css
+++ b/theme/cascader.css
@@ -491,7 +491,7 @@
       border-color: #c0c4cc; }
     .el-textarea__inner:focus {
       outline: none;
-      border-color: #409EFF; }
+      border-color: #12BBCD; }
   .el-textarea.is-disabled .el-textarea__inner {
     background-color: #f5f7fa;
     border-color: #e4e7ed;
@@ -566,7 +566,7 @@
       border-color: #c0c4cc; }
     .el-input__inner:focus {
       outline: none;
-      border-color: #409EFF; }
+      border-color: #12BBCD; }
   .el-input__suffix {
     position: absolute;
     height: 100%;
@@ -605,7 +605,7 @@
     pointer-events: none; }
   .el-input.is-active .el-input__inner {
     outline: none;
-    border-color: #409EFF; }
+    border-color: #12BBCD; }
   .el-input.is-disabled .el-input__inner {
     background-color: #f5f7fa;
     border-color: #e4e7ed;
@@ -1030,6 +1030,8 @@
   .el-cascader .el-input,
   .el-cascader .el-input__inner {
     cursor: pointer; }
+  .el-cascader .el-input.is-focus .el-input__inner {
+    border-color: #12BBCD; }
   .el-cascader .el-input__icon {
     -webkit-transition: none;
     transition: none; }
@@ -1135,7 +1137,7 @@
       .el-cascader-menu__item.is-disabled:hover {
         background-color: #fff; }
     .el-cascader-menu__item.is-active {
-      color: #409EFF; }
+      color: #12BBCD; }
     .el-cascader-menu__item:hover, .el-cascader-menu__item:focus:not(:active) {
       background-color: #f5f7fa; }
     .el-cascader-menu__item.selected {
