--- a/theme/form.css
+++ b/theme/form.css
@@ -321,7 +321,7 @@
       left: auto;
       display: inline-block;
       margin-left: 10px; }
-  .el-form-item.is-required .el-form-item__label:before {
+  .el-form-item.is-required > .el-form-item__label:before {
     content: '*';
     color: #f56c6c;
     margin-right: 4px; }
