--- a/theme/menu.css
+++ b/theme/menu.css
@@ -467,9 +467,10 @@
     content: ""; }
   .el-menu::after {
     clear: both; }
-  .el-menu--horizontal {
-    border-right: none;
+  .el-menu.el-menu--horizontal {
     border-bottom: solid 1px #e6e6e6; }
+  .el-menu--horizontal {
+    border-right: none; }
     .el-menu--horizontal > .el-menu-item {
       float: left;
       height: 60px;
@@ -489,7 +490,7 @@
         .el-menu--horizontal > .el-submenu:focus .el-submenu__title, .el-menu--horizontal > .el-submenu:hover .el-submenu__title {
           color: #303133; }
       .el-menu--horizontal > .el-submenu.is-active .el-submenu__title {
-        border-bottom: 2px solid #409EFF;
+        border-bottom: 2px solid #12BBCD;
         color: #303133; }
       .el-menu--horizontal > .el-submenu .el-submenu__title {
         height: 60px;
@@ -511,15 +512,15 @@
       line-height: 36px;
       padding: 0 10px;
       color: #909399; }
-      .el-menu--horizontal .el-menu .el-menu-item.is-active,
-      .el-menu--horizontal .el-menu .el-submenu__title.is-active {
-        color: #303133; }
+    .el-menu--horizontal .el-menu .el-menu-item.is-active,
+    .el-menu--horizontal .el-menu .el-submenu.is-active > .el-submenu__title {
+      color: #303133; }
     .el-menu--horizontal .el-menu-item:not(.is-disabled):hover,
     .el-menu--horizontal .el-menu-item:not(.is-disabled):focus {
       outline: none;
       color: #303133; }
     .el-menu--horizontal > .el-menu-item.is-active {
-      border-bottom: 2px solid #409EFF;
+      border-bottom: 2px solid #12BBCD;
       color: #303133; }
   .el-menu--collapse {
     width: 64px; }
@@ -592,7 +593,7 @@
     color: #909399; }
   .el-menu-item:hover, .el-menu-item:focus {
     outline: none;
-    background-color: #ecf5ff; }
+    background-color: #e7f8fa; }
   .el-menu-item.is-disabled {
     opacity: 0.25;
     cursor: not-allowed;
@@ -604,7 +605,7 @@
     font-size: 18px;
     vertical-align: middle; }
   .el-menu-item.is-active {
-    color: #409EFF; }
+    color: #12BBCD; }
     .el-menu-item.is-active i {
       color: inherit; }
 
@@ -632,13 +633,13 @@
       color: #909399; }
     .el-submenu__title:hover, .el-submenu__title:focus {
       outline: none;
-      background-color: #ecf5ff; }
+      background-color: #e7f8fa; }
     .el-submenu__title.is-disabled {
       opacity: 0.25;
       cursor: not-allowed;
       background: none !important; }
     .el-submenu__title:hover {
-      background-color: #ecf5ff; }
+      background-color: #e7f8fa; }
   .el-submenu .el-menu {
     border: none; }
   .el-submenu .el-menu-item {
@@ -657,7 +658,7 @@
     transition: transform .3s, -webkit-transform .3s;
     font-size: 12px; }
   .el-submenu.is-active .el-submenu__title {
-    border-bottom-color: #409EFF; }
+    border-bottom-color: #12BBCD; }
   .el-submenu.is-opened > .el-submenu__title .el-submenu__icon-arrow {
     -webkit-transform: rotateZ(180deg);
     transform: rotateZ(180deg); }
