--- a/theme/reset.css
+++ b/theme/reset.css
@@ -117,12 +117,12 @@ body {
   -webkit-font-smoothing: antialiased; }
 
 a {
-  color: #409EFF;
+  color: #12BBCD;
   text-decoration: none; }
   a:hover, a:focus {
-    color: #66b1ff; }
+    color: #41c9d7; }
   a:active {
-    color: #3a8ee6; }
+    color: #10a8b9; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #606266;
